methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:7: error: not found: type olor
def isFacingTrail(c: olor):Boolean = {
                     ^