methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     // Write your code here
 }

 // here comes your isFacingTrail method
def isFacingTrail(c: olor):Boolean = {
  if(estFaceMur()==false) {
  	avance()
  	var vu=(getCouleurSol==c)
  	recule()
    return vu
  }
  else {
    return false
  }
}